fixed we love page spacing

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3381,3 +3381,8 @@ footer.short-2 .contact-action:hover {
 .stat h3 {
   color: #fff;
 }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
